{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 272,
  "lineage": "39d9bcf0-0933-7432-83ae-f50cec66d68b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "pacpet1_dockerserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-03e5bf04af6d29553",
            "arn": "arn:aws:ec2:eu-west-2:646480871475:instance/i-024491657c26ea037",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "pacpet1_dockerserver"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-024491657c26ea037",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "pacpet1_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0ffc8ace5e4b91e65",
            "private_dns": "ip-10-0-1-113.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_ip": "13.40.166.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f15645522e3882f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c393b7d786cdedf2",
            "tags": {
              "Name": "pacpet1_dockerserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0852dc75bc6ffbcc1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pacpet1_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5e6dd7f423dd289",
            "association_id": "eipassoc-0f4de61867c974f80",
            "domain": "vpc",
            "id": "eipalloc-0b5e6dd7f423dd289",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-09b561ea77065990d",
            "private_dns": "ip-10-0-1-17.eu-west-2.compute.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-18-168-189-24.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.189.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pacpet1_nat_eip"
            },
            "tags_all": {
              "Name": "pacpet1_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Sonarqube_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb391cce7a602d1f",
            "arn": "arn:aws:ec2:eu-west-2:646480871475:instance/i-074f207eff6ecbc88",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074f207eff6ecbc88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pacpet1_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf41c2ef8e470a99",
            "private_dns": "ip-10-0-1-111.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_ip": "18.130.48.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f0edbb00d9fe8ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c393b7d786cdedf2",
            "tags": {
              "Name": "Sonarqube_Server"
            },
            "tags_all": {
              "Name": "Sonarqube_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0254905626743150b"
            ]
          },
          "dependencies": [
            "aws_key_pair.pacpet1_pub_key",
            "aws_security_group.pacpet1_sq_sg",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc",
            "tls_private_key.pacpet1_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pacpet1-ansible-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035c5dc086849b5de",
            "arn": "arn:aws:ec2:eu-west-2:646480871475:instance/i-012a72b9db33d6787",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a72b9db33d6787",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pacpet1_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0781390f383c38b97",
            "private_dns": "ip-10-0-1-242.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_ip": "3.10.180.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8331edbc3f209ae",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c393b7d786cdedf2",
            "tags": {
              "Name": "pacpet1-ansible-server"
            },
            "tags_all": {
              "Name": "pacpet1-ansible-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-03f42be572abb129f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_instance.pacpet1_dockerserver",
            "aws_key_pair.pacpet1_pub_key",
            "aws_security_group.pacpet1_ansible_sg",
            "aws_security_group.pacpet1_docker_sg",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc",
            "tls_private_key.pacpet1_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pacpet1_Jenkins_Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035c5dc086849b5de",
            "arn": "arn:aws:ec2:eu-west-2:646480871475:instance/i-0d4e0e564ac64284e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4e0e564ac64284e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pacpet1_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-028d4f9cbdec05f22",
            "private_dns": "ip-10-0-1-29.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_ip": "18.133.222.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0edf7fea94087c394",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c393b7d786cdedf2",
            "tags": {
              "Name": "pacpet1_Jenkins_Host"
            },
            "tags_all": {
              "Name": "pacpet1_Jenkins_Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae9819c9b656a4b2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.pacpet1_pub_key",
            "aws_security_group.pacpet1_jenkins_sg",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc",
            "tls_private_key.pacpet1_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pacpet1_dockerserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e5bf04af6d29553",
            "arn": "arn:aws:ec2:eu-west-2:646480871475:instance/i-024491657c26ea037",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024491657c26ea037",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pacpet1_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ffc8ace5e4b91e65",
            "private_dns": "ip-10-0-1-113.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_ip": "13.40.166.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f15645522e3882f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c393b7d786cdedf2",
            "tags": {
              "Name": "pacpet1_dockerserver"
            },
            "tags_all": {
              "Name": "pacpet1_dockerserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0852dc75bc6ffbcc1"
            ]
          },
          "dependencies": [
            "aws_key_pair.pacpet1_pub_key",
            "aws_security_group.pacpet1_docker_sg",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc",
            "tls_private_key.pacpet1_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pacpet1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:internet-gateway/igw-0d528423a7c96a715",
            "id": "igw-0d528423a7c96a715",
            "owner_id": "646480871475",
            "tags": {
              "Name": "pacpet1_igw"
            },
            "tags_all": {
              "Name": "pacpet1_igw"
            },
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pacpet1-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:loadbalancer/app/pacpet1-lb/00b02994b1aa2ec0",
            "arn_suffix": "app/pacpet1-lb/00b02994b1aa2ec0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pacpet1-lb-640822462.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:loadbalancer/app/pacpet1-lb/00b02994b1aa2ec0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pacpet1-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0852dc75bc6ffbcc1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ab6061eb8a2172e3"
              },
              {
                "subnet_id": "subnet-0c393b7d786cdedf2"
              }
            ],
            "subnets": [
              "subnet-0ab6061eb8a2172e3",
              "subnet-0c393b7d786cdedf2"
            ],
            "vpc_id": "vpc-0dc82c305964ba657",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.pacpet1_docker_sg",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_subnet.pacpet1_pubsn_02",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pacpet1_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:listener/app/pacpet1-lb/00b02994b1aa2ec0/ea2288d7e95afb20",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:targetgroup/pacpet1-tg/884e57ccfa19ea3d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:listener/app/pacpet1-lb/00b02994b1aa2ec0/ea2288d7e95afb20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:loadbalancer/app/pacpet1-lb/00b02994b1aa2ec0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.pacpet1-lb",
            "aws_lb_target_group.pacpet1-tg",
            "aws_security_group.pacpet1_docker_sg",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_subnet.pacpet1_pubsn_02",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pacpet1-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:targetgroup/pacpet1-tg/884e57ccfa19ea3d",
            "arn_suffix": "targetgroup/pacpet1-tg/884e57ccfa19ea3d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:targetgroup/pacpet1-tg/884e57ccfa19ea3d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pacpet1-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pacpet1-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:targetgroup/pacpet1-tg/884e57ccfa19ea3d-20221013224730205600000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:646480871475:targetgroup/pacpet1-tg/884e57ccfa19ea3d",
            "target_id": "i-024491657c26ea037"
          },
          "dependencies": [
            "aws_instance.pacpet1_dockerserver",
            "aws_key_pair.pacpet1_pub_key",
            "aws_lb_target_group.pacpet1-tg",
            "aws_security_group.pacpet1_docker_sg",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc",
            "tls_private_key.pacpet1_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pacpet1_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5e6dd7f423dd289",
            "connectivity_type": "public",
            "id": "nat-06a772a5cd16e6278",
            "network_interface_id": "eni-09b561ea77065990d",
            "private_ip": "10.0.1.17",
            "public_ip": "18.168.189.24",
            "subnet_id": "subnet-0c393b7d786cdedf2",
            "tags": {
              "Name": "pacpet1_ngw"
            },
            "tags_all": {
              "Name": "pacpet1_ngw"
            }
          },
          "dependencies": [
            "aws_eip.pacpet1_nat_eip",
            "aws_internet_gateway.pacpet1_igw",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pacpet1_igw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:route-table/rtb-0007d8afddad070b0",
            "id": "rtb-0007d8afddad070b0",
            "owner_id": "646480871475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d528423a7c96a715",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pacpet1_igw_rt"
            },
            "tags_all": {
              "Name": "pacpet1_igw_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pacpet1_igw",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pacpet1_ngw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:route-table/rtb-0406e7fce3099c168",
            "id": "rtb-0406e7fce3099c168",
            "owner_id": "646480871475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06a772a5cd16e6278",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pacpet1_ngw_rt"
            },
            "tags_all": {
              "Name": "pacpet1_ngw_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.pacpet1_ngw",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pacpet1_prv1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02326dc2f8247cabd",
            "route_table_id": "rtb-0406e7fce3099c168",
            "subnet_id": "subnet-0e36c10ea68e4f870"
          },
          "dependencies": [
            "aws_eip.pacpet1_nat_eip",
            "aws_internet_gateway.pacpet1_igw",
            "aws_nat_gateway.pacpet1_ngw",
            "aws_route_table.pacpet1_ngw_rt",
            "aws_subnet.pacpet1_prvsn_01",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pacpet1_prv2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037e5e5f22bbbb46a",
            "route_table_id": "rtb-0406e7fce3099c168",
            "subnet_id": "subnet-0484568aab65fd03a"
          },
          "dependencies": [
            "aws_eip.pacpet1_nat_eip",
            "aws_internet_gateway.pacpet1_igw",
            "aws_nat_gateway.pacpet1_ngw",
            "aws_route_table.pacpet1_ngw_rt",
            "aws_subnet.pacpet1_prvsn_02",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pacpet1_pub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec779a7e21f2382a",
            "route_table_id": "rtb-0007d8afddad070b0",
            "subnet_id": "subnet-0c393b7d786cdedf2"
          },
          "dependencies": [
            "aws_internet_gateway.pacpet1_igw",
            "aws_route_table.pacpet1_igw_rt",
            "aws_subnet.pacpet1_pubsn_01",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pacpet1_pub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1a3cc97c0f2cc0c",
            "route_table_id": "rtb-0007d8afddad070b0",
            "subnet_id": "subnet-0ab6061eb8a2172e3"
          },
          "dependencies": [
            "aws_internet_gateway.pacpet1_igw",
            "aws_route_table.pacpet1_igw_rt",
            "aws_subnet.pacpet1_pubsn_02",
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pacpet1_ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:security-group/sg-03f42be572abb129f",
            "description": "Allow traffic for ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f42be572abb129f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pacpet1_ansible_sg",
            "name_prefix": "",
            "owner_id": "646480871475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pacpet1_ansible_sg"
            },
            "tags_all": {
              "Name": "pacpet1_ansible_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pacpet1_docker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:security-group/sg-0852dc75bc6ffbcc1",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0852dc75bc6ffbcc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "pacpet1_docker_sg",
            "name_prefix": "",
            "owner_id": "646480871475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pacpd_docker_sg"
            },
            "tags_all": {
              "Name": "pacpd_docker_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pacpet1_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:security-group/sg-0ae9819c9b656a4b2",
            "description": "Allow Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae9819c9b656a4b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "pacpet1_frontend_sg",
            "name_prefix": "",
            "owner_id": "646480871475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pacpet1_jenkins_sg"
            },
            "tags_all": {
              "Name": "pacpet1_jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pacpet1_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:security-group/sg-05f25da39610f9d75",
            "description": "Allow traffic for mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f25da39610f9d75",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Allow mysql traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "pacpet1_mysql_sg",
            "name_prefix": "",
            "owner_id": "646480871475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pacpet1_mysql_sg"
            },
            "tags_all": {
              "Name": "pacpet1_mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pacpet1_sq_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:security-group/sg-0254905626743150b",
            "description": "Allow traffic for SonarQube",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0254905626743150b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SonarQube traffic",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pacpet1_sq_sg",
            "name_prefix": "",
            "owner_id": "646480871475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pacpet1_mysql_sg"
            },
            "tags_all": {
              "Name": "pacpet1_mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pacpet1_prvsn_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:subnet/subnet-0e36c10ea68e4f870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e36c10ea68e4f870",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646480871475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pacpet1_prvsn_01"
            },
            "tags_all": {
              "Name": "pacpet1_prvsn_01"
            },
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pacpet1_prvsn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:subnet/subnet-0484568aab65fd03a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0484568aab65fd03a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646480871475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pacpet1_prvsn_02"
            },
            "tags_all": {
              "Name": "pacpet1_prvsn_02"
            },
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pacpet1_pubsn_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:subnet/subnet-0c393b7d786cdedf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c393b7d786cdedf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646480871475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pacpet1_pubsn_01"
            },
            "tags_all": {
              "Name": "pacpet1_pubsn_01"
            },
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pacpet1_pubsn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:subnet/subnet-0ab6061eb8a2172e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab6061eb8a2172e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646480871475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pacpet1_pubsn_02"
            },
            "tags_all": {
              "Name": "pacpet1_pubsn_02"
            },
            "vpc_id": "vpc-0dc82c305964ba657"
          },
          "dependencies": [
            "aws_vpc.pacpet1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pacpet1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:646480871475:vpc/vpc-0dc82c305964ba657",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06983c5535d27a37b",
            "default_route_table_id": "rtb-09a65534558bb64b8",
            "default_security_group_id": "sg-048d5919df6b3df24",
            "dhcp_options_id": "dopt-0a3dbf571df571610",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dc82c305964ba657",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a65534558bb64b8",
            "owner_id": "646480871475",
            "tags": {
              "Name": "pacpet1_vpc"
            },
            "tags_all": {
              "Name": "pacpet1_vpc"
            }
          }
        }
      ]
    }
  ]
}